# RecStats

./: .gitignore  CITI-LAPTOP-SETUP.md  CLAUDE.md  DEPLOY.md  README.md  RECVIZ_V2_BUILD_PLAN.md  STATS.md  TESTING.md  docker-compose.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  USAGE-TRACKER.md  config.json
01-RecStats/: .env.example  STATS.md
02-RecViz/: CLAUDE.md
02-RecViz-Old/: LESSONS_FOR_NEXT_BUILD.md
02-RecViz-Old/recviz/backend/: pyproject.toml  requirements.txt
02-RecViz-Old/recviz/backend/app/: config.py  main.py  seed.py
02-RecViz-Old/recviz/backend/app/api/: charts.py  custom.py  dashboards.py  datasets.py  export.py  sql.py  views.py
02-RecViz-Old/recviz/backend/app/core/: dependencies.py  exceptions.py
02-RecViz-Old/recviz/backend/app/mock/: data.py
02-RecViz-Old/recviz/backend/app/models/: custom.py  dashboard.py  dataset.py  filters.py  search.py  sql.py  views.py
02-RecViz-Old/recviz/backend/app/services/: aggregation_service.py  cache.py  filter_converter.py  superset_client.py
02-RecViz-Old/recviz/backend/tests/: test_charts.py  test_dashboards.py  test_datasets.py  test_export.py  test_search.py  test_views.py
03-RecViz/: CLAUDE.md
backend/: .env.citi.example  .env.example  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: API.md  ARCHITECTURE.md  CODEBASE_GUIDE.md  CONFIGURATION.md  DEPLOYMENT-ORACLE.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  SETUP.md  TESTING.md
frontend/: .env.local.example  .gitignore  angular.json  (+6 more)
(+1091 files in other folders)
