[project]
name = "recviz-backend"
version = "0.1.0"
description = "RecViz Backend - FastAPI sidecar and Superset proxy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "celery>=5.3",
    "elasticsearch>=8.0",
    "aiohttp>=3.9",
    "openpyxl>=3.1",
    "weasyprint>=60.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/api/*.py" = ["B008"]  # Depends() in defaults is standard FastAPI pattern

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
